src/Infrastructure/k8s/auth-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: authservice-srv
spec:
  type: NodePort
  selector: 
    app: authservice
  ports:
    - name: authservice
      protocol: TCP
      port: 4999
      targetPort: 4999
