src/Infrastructure/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: web.shopping.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: listservice-clusterip-srv
                port: 
                  number: 5000
